[gd_scene load_steps=13 format=3 uid="uid://dqgbt1vrptgxo"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_wrl5f"]
[ext_resource type="PackedScene" uid="uid://b0ed3eog3yewq" path="res://Scenes/player.tscn" id="2_grxt0"]
[ext_resource type="PackedScene" uid="uid://do37nfh3e8u1t" path="res://Scenes/drone.tscn" id="3_rcs2g"]
[ext_resource type="PackedScene" uid="uid://cgoxu3k7162bf" path="res://Scenes/drone_purple.tscn" id="4_3ejpl"]
[ext_resource type="AudioStream" uid="uid://b03c2ics56ifa" path="res://Game Sprites/SFX/DroneDie.wav" id="4_h5xk1"]
[ext_resource type="PackedScene" uid="uid://d0wd5j2muhpcy" path="res://Scenes/hud.tscn" id="4_oq2sk"]
[ext_resource type="PackedScene" uid="uid://bddnh2qx4snh5" path="res://Scenes/game_over.tscn" id="5_ygxs5"]
[ext_resource type="Texture2D" uid="uid://djvm31rx3wjli" path="res://Game Sprites/Enviroment/Space, I guess.png" id="6_eqfxe"]
[ext_resource type="AudioStream" uid="uid://b2ubj4ge7g7he" path="res://Game Sprites/SFX/PlayerDie.wav" id="6_pnqsp"]
[ext_resource type="Texture2D" uid="uid://63poegdfjrr8" path="res://Game Sprites/Enviroment/StarMoving.png" id="7_cqyv8"]
[ext_resource type="AudioStream" uid="uid://bfsy6525rnk5m" path="res://Game Sprites/SFX/PlayerLaser.wav" id="7_pa2lm"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3qguf"]
emission_shape = 3
emission_box_extents = Vector3(270, 1, 1)
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -750.0
initial_velocity_max = -750.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[node name="Game" type="Node2D"]
script = ExtResource("1_wrl5f")
enemy_scenes = Array[PackedScene]([ExtResource("3_rcs2g"), ExtResource("4_3ejpl")])

[node name="SFX" type="Node2D" parent="."]

[node name="PlayerDie" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_pnqsp")

[node name="PlayerLaser" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_pa2lm")

[node name="DroneDie" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_h5xk1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("4_oq2sk")]

[node name="GameOver" parent="UI" instance=ExtResource("5_ygxs5")]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 720)

[node name="Background_Space" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("6_eqfxe")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 540, 720)

[node name="Star_Effect" type="GPUParticles2D" parent="."]
position = Vector2(270, -48)
amount = 12
process_material = SubResource("ParticleProcessMaterial_3qguf")
texture = ExtResource("7_cqyv8")
lifetime = 1.5
preprocess = 5.0

[node name="Player" parent="." instance=ExtResource("2_grxt0")]
position = Vector2(243, 657)

[node name="Spawn" type="Marker2D" parent="."]
position = Vector2(243, 666)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
